# vps_localization

./: README.md  estimate_pose.py  load.ps1  main.py  plot_polygons.py  pyproject.toml  upload_photo.py  visible_shops.pickle
editor/: corridor_annotation.html  index.html
example/: annotations.corridor.json  annotations.shop.json
