[project]
name = "vps-localization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.5",
    "python-multipart>=0.0.20",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
